--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -32,6 +32,19 @@
                 </button>
                 <a class="navbar-brand" href="/">ECommerce</a>
             </div>
+            
+            <div class="col-sm-3 col-md-3">
+                <form class="navbar-form" role="search" action="{% url 'search' %}">
+                    <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search" name="query">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
+                </form>
+            </div> 
+            
+            
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
@@ -48,9 +61,22 @@
             </div>
         </div>
     </nav>
+    
     <div class="container">
+        <div class="row">
+            <form action={% url 'search' %}>
+                <input class="form-control" type="text" placeholder="Search" name="search">
+                <input type="radio" name="match" value="contains" checked>Contains<br>
+                <input type="radio" name="match" value="begins">Begins With<br>
+                <input class="btn btn-default" type="submit" value="search" />
+            </form>
+        </div>
+    <div class="row">        
         {% block content %} {% endblock %}
     </div>
+    </div>
+    
+    
     <footer>
         <div class="container">
             <p>Made by Code Institute bootcampers</p>
